# smart-teapot

./: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.esp32c3
components/config/: CMakeLists.txt  idf_component.yml
components/config/include/: config.h
components/config/src/: config.c
components/onewire_bus/: README.md
components/relay/: CMakeLists.txt  idf_component.yml
components/relay/include/: relay.h
components/relay/src/: relay.c
components/temp_sensor/: CMakeLists.txt  idf_component.yml
components/temp_sensor/include/: temp_sensor.h
components/temp_sensor/src/: temp_sensor.c
components/wifi_web/: CMakeLists.txt  idf_component.yml
components/wifi_web/include/: wifi_web.h
components/wifi_web/src/: wifi_web.c
data/: index.html  script.js  styles.css
scripts/: gen_config.py
src/: CMakeLists.txt  main.c
test/: test_config.c  test_main.c  test_wifi_web.c
